* New: Lists Potions/Vials used by each Raid/Party member. (See available Potions - to be expanded)
* New: Lists Weapon Stones used by each Raid/Party member. (See available Stones - to be expanded)
* New: Lists Current and Max Planar charges for each Raid/Party member.
* New: Option to disable/enable the display in the options window.
* New: Toggle the Ready Check enabled/display state via the slash command /kbmreadycheck.
* New: Staggered KBM Version retrieval if a player's version has not already been cached.
* New: Color added to various states of KBM Version status.
* New: Color added to Soul Vatility display.
* Change: Moved Ready Check window to its own context.

Ready Check Available Tracking
* Food
** Feast of Cooperation (All) - High
** Dwarven Goulash (Tanks) - High
** Kelari Spicey Pome (Tanks) - High
** Feast of Aptitude (Cleric, Mage) - High
** Feast of Expertise (Warrior, Rogue) - High
** Kelari Expedition Cherry Cake (Mage, Cleric) - Medium
** Kelari Expedition Chocolate Cake (Warrior, Rogue) - Medium
** Farclan Cherry Cake (Mage, Cleric) - Medium
** Farclan Chocolate Cake (Warrior, Rogue) - Medium
* Weapon Stones
** Burning Powerstone (Mage, Cleric) - High
** Ancient Burning Powerstone (Mage, Cleric) - High
** Flaring Glyph (Mage, Cleric) - Medium
** Exquisite Oilstone (Warrior, Rogue) - High
** Ancient Equisite Oilstone (Warrior, Rogue) - High
** Exquisite Whetstone (Warrior, Rogue) - High
** Fine Whetstone (Warrior, Rogue) - Medium
** Lightning Glyph (Warrior, Rogue) - Medium
** Storm Glyph (Warrior) - Medium
* Potions/Vials
** Herioc Brightsurge Vial (Mage, Cleric) - High
** Ancient Herioc Brightsurge Vial (Mage, Cleric) - High
** Herioc Powersurge Vial (Warrior, Rogue) - High
** Ancient Herioc Powersurge Vial (Warrior, Rogue) - High
** Herioc Enduring Vial (All) - High
** Ancient Herioc Enduring Vial (All) - High
** Vial of Earth Resistance (All) - High
** Vial of Fire Resistance (All) - High
** Vial of Water Resistance (All) - High